--- a/SortedResourcePane.Blend5/SortedResourcePane.Blend5.csproj
+++ b/SortedResourcePane.Blend5/SortedResourcePane.Blend5.csproj
@@ -2,7 +2,7 @@
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{8FEE5A92-B4C8-4D84-8BE8-D9F9C8CAA4AE}</ProjectGuid>
